--- a/index.html
+++ b/index.html
@@ -81,6 +81,21 @@
         </a>
       </section>
 
+      <section id="aboutus">
+        <br>
+        <h3>About us</h3>
+        <hr>
+        <h4>THE ASTRAY</h4>
+        <p>
+          The Astray is an indi-Rockband with a modern take on romanticism and an old-fashioned garage rock-selfmade feeling.
+Settled in the mid-west of Germany, the Band formed in 2020 out of two former student bands of Lukas Raschke (Lead-Singer and Guitarist), Marco D'Anna (Pianist and second Guitarist), Matthias Rudnik (Drummer), Leon Schneider (Bassist) and Tobias Döhling (background management and concept artist) joined the band in 2022, was highly inspired by their Idols reaching from bands like Queen to MCR, to FallOutBoy and even Bring Me The Horizon. But the sound of the Band can't be described with just one genre. It's fluctuating and unpredictable, like a Dream. Thus the Idea for "A Moonlight Night" was born. The Album is a representation of the different Dreams of a Moonlight Night and the different sound the Band has to offer, from Hard Rock, to Acoustic Songs and Classic-Rock-Ballads. 
+          <br>
+        </p>
+        <a href="#projects">
+          <p class="pfeil">▼</p>
+        </a>
+      </section>
+
       <!--Songs----------------------------------------------------->
 
       <section id="projects">
@@ -97,8 +112,8 @@
             <li><a href="#song_05" onclick=playi()><img src="songs/incredible/incredible.png" alt="Song_05.png"></a></li>
             <li><a href="#song_06" onclick=playnp()><img src="songs/neonpink/neonpink.png" alt="Song_06.png"></a></li>
             <li><a href="#song_07" onclick=playsi()><img src="songs/sleepingissues/sleepingissues.png" alt="Song_07.png"></a></li>
-            <li><a href="#song_08" onclick=playmot()><img src="songs/madeoftears/madeoftears.png" alt="Song_08.png"></a></li>
-            <li><a href="#song_09" onclick=playclt()><img src="songs/crookedlittletrees/crookedlittletrees.png" alt="Song_09.png"></a></li>
+            <li><a href="#song_08" onclick=playclt()><img src="songs/crookedlittletrees/crookedlittletrees.png" alt="Song_08.png"></a></li>
+            <li><a href="#song_09" onclick=playmot()><img src="songs/madeoftears/madeoftears.png" alt="Song_09.png"></a></li>
           </ul>
         </div>
       </section>
@@ -217,9 +232,9 @@
          For a moonlight night, a moonlight night <br>
                       [...] <br>
             <br>
-            Ein kleiner Text in dem ein paar Worte über den Song <br>
-            und seine entstehung geäußert werden, damit die Seite <br>
-            nicht ganz so leer ist.
+            "Moonlight Night" is the titel giving song of the Album. <br>
+             It takes you out on a walk through the night, next to the river and into the woods. <br>
+              As the dark surrounds you, you hold on to the person you love and promise to never leave their side, hoping to suvive those dark times together.
           </p>
           <img src="Img/pagebreak.png" alt="pageBreak.png">
         </li>
@@ -256,11 +271,7 @@
           And If it's that what you desire I'm the match and you're the gasoline <br>
                       [...] <br>
             <br>
-            Ein kleiner Text in dem ein paar Worte über den Song <br>
-            und seine entstehung geäußert werden, damit die Seite <br>
-            nicht ganz so leer ist.
-            <br>
-            It's about our deepest - and in this case - darkest desires.
+            "Molotov Love" is a little bit different from the previous songs. It shows the rougher and more passionate sides of love. Because if there is the fire of love, you can burn yourself with it. After all love is about taking risks, so "if your love would be riot, oh then I'd be throwing stones".
           </p>
           <img src="Img/pagebreak.png" alt="pageBreak.png">
         </li>
@@ -278,9 +289,8 @@
             Please, give me another look with your two emerald eyes <br>
                               [...] <br>
             <br>
-            Ein kleiner Text in dem ein paar Worte über den Song <br>
-            und seine entstehung geäußert werden, damit die Seite <br>
-            nicht ganz so leer ist.
+            "Emerald Eyes" was written in love for a mysterious person. <br>
+            Mysterious eyes, an mysterious personality and an old nemesis called Idealization lead to this song. It's about wanting to look behind the fassade and about getting to know someone untouchable. The song was written for a person that was "fucking with my brain" for a long time, but after all I "fucked" with my own brain enough myself, leading to an unpleasent end.
           </p>
           <img src="Img/pagebreak.png" alt="pageBreak.png">
         </li>
@@ -295,9 +305,8 @@
             You're makin' me feel special <br>
                       [...] <br>
             <br>
-            Ein kleiner Text in dem ein paar Worte über den Song <br>
-            und seine entstehung geäußert werden, damit die Seite <br>
-            nicht ganz so leer ist.
+            Incredible is a classic teenage love song. <br>
+             It's full of cringey love declarations, because the song wants to express the feeling of invincibility one experiences while being in love. When you are in love, knowing of their love for you and the sole existence of your person make you feel incredible and that is what this song is all about.
           </p>
           <img src="Img/pagebreak.png" alt="pageBreak.png">
         </li>
@@ -305,7 +314,7 @@
         <li id="song_06">
           <h3>Neon Pink</h3>
           <hr>
-          <p> 
+          <p>   
             [...] <br>
             And when I wear my rose coloured glasses <br>
             I'm seeing rose coloured ashes <br>
@@ -317,9 +326,7 @@
             Don't you bring the gasoline <br>
             [...] <br>
             <br>
-            Ein kleiner Text in dem ein paar Worte über den Song <br>
-            und seine entstehung geäußert werden, damit die Seite <br>
-            nicht ganz so leer ist.
+            "Neon Pink" is the melancholic take on the impact that one person can have on your life. You emotionally connect everything you experience to this Person, while you love them, but once your paths part, those connections become either tainted pink with nostalgia, or dark grey in remorse and bitterness.
           </p>
           <img src="Img/pagebreak.png" alt="pageBreak.png">
         </li>
@@ -334,14 +341,27 @@
         Even though sleeping next to me means I can sleep <br>
                       [...] <br>
             <br>
-            Ein kleiner Text in dem ein paar Worte über den Song <br>
-            und seine entstehung geäußert werden, damit die Seite <br>
-            nicht ganz so leer ist.
+            "Sleeping Issues" is about unfinished business. It's about holding on to a long lost love, which you can't let go. This song is a bittersweet example of a broken person, who isn't ready to accept their faith. It should be used as an example of how not to behave after a break up, because it is a waste of energy and time to let your life be dictated by such false beliefs. Don't fall for it, but stand up and live.
           </p>
           <img src="Img/pagebreak.png" alt="pageBreak.png">
         </li>
 
         <li id="song_08">
+          <h3>Crooked little Trees</h3>
+          <hr>
+          <p> 
+                      [...] <br>
+         It's a pretty vicious, superstition <br>  
+       Cause no one is as perfect as he looks <br>
+         Cause we're all just crooked little trees <br>
+                      [...] <br>
+            <br>
+            "Crooked Little Trees" is a realization. It's a tale of the morals our society dictates us and about the way of thinking, which is empowered by the media and the public. It is a statement against our shallow way of thinking. Growing up with so many superficial realities, one has to really learn what real values are and how life is lived the right way.
+          </p>
+          <img src="Img/pagebreak.png" alt="pageBreak.png" id="pagebreak">
+        </li>
+
+        <li id="song_09">
           <h3>Made of Tears</h3>
           <h5>- Blue at the Dreamers Ball -</h5>
           <hr>
@@ -367,27 +387,12 @@
             Farewell, my dear Aries. Thank you for giving me the feeling of being loved by someone <br>
             -M 
           </h5>
-          <img src="Img/pagebreak.png" alt="pageBreak.png" id="pagebreak">
-        </li>
-
-        <li id="song_09">
-          <h3>Crooked little Trees</h3>
-          <hr>
-          <p> 
-                      [...] <br>
-         It's a pretty vicious, superstition <br>  
-       Cause no one is as perfect as he looks <br>
-         Cause we're all just crooked little trees <br>
-                      [...] <br>
-            <br>
-            Ein kleiner Text in dem ein paar Worte über den Song <br>
-            und seine entstehung geäußert werden, damit die Seite <br>
-            nicht ganz so leer ist.
-          </p>
           <a href="#contact"> 
             <h4 class="pfeil">▼</h4>
           </a>
         </li>
+
+        
 
         </ul>
       </section>
