--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@ Settled in the mid-west of Germany, the Band formed in 2020 out of two former st
                               [...] <br>
                       Let me melt your armor <br>
                           Made of blue ice <br>
-              Just give another look with your emerald eyes <br>
+              Just give me another look with your emerald eyes <br>
                           Imma be your amor <br>
                       Will you be my valentine? <br>
             Please, give me another look with your two emerald eyes <br>
